# rustblocks

./: Cargo.toml  binaries.sh  readme.md
src/: board.rs  gamestate.rs  main.rs  pieces.rs  print.rs  printstuff.rs  score.rs  test.rs
