[package]
name = "rustblocks"
version = "0.1.0"
description = "A simple command line game where you try to clear as many blocks as possible"
edition = "2021"
authors = ["Josh Vanderberg jvanderberg@gmail.com"]
readme = "readme.md"
license = "MIT"
homepage = "https://github.com/jvanderberg/rustblocks"
repository = "https://github.com/jvanderberg/rustblocks"
keywords = ["cli", "games", "blocks"]
categories = ["command-line-utilities", "games-and-entertainment"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.27.0"
rand = "0.8.5"


