[package]
name = "rustblocks"
version = "0.3.3"
description = "Rustblocks is a simple tetromino based falling blocks game"
edition = "2021"
authors = ["Josh Vanderberg jvanderberg@gmail.com"]
readme = "readme.md"
license = "MIT"
homepage = "https://github.com/jvanderberg/rustblocks"
repository = "https://github.com/jvanderberg/rustblocks"
keywords = ["cli", "games", "blocks"]
categories = [ "games-and-entertainment"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.27.0"
rand = "0.8.5"
blocks_lib = { path = "../blocks_lib", version = "0.3.3" }
terminal-light = "1.2.0"


